# AlphaChat

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: questions_answers.csv
src/: app.py  dashboard.py  index.py  responses.py
tests/: test_app.py
